iron out some bugs

--- a/friv-suit-bill.html
+++ b/friv-suit-bill.html
@@ -15,7 +15,7 @@
         Frivolous Suit Act of 2022
         <h3>Purpose {#purpose}</h3>
         To reduce the number of frivolous lawsuits flooding our courts, and to incentivize suits to be settled out-of-court.
-        BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON
+        <strong><i>BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</i></strong>
         <h4>Section 1 {#definitions}</h4> For the purposes of this act, “frivolous suit” refers to any lawsuit `???`.
         <h4>Section 2 {#text}</h4> All lawyers' fees, court fees, etc. associated with any resolved suit between two individual private citizens of the United States of America shall be paid by the loser of the lawsuit.
         If the suit is by a noncitizen, such as a corporation, directed towards a private citizen, then the private citizen is exempt from needing to pay the corporation's lawyers' fees. However, the corporation must still pay the citizen's lawyers' fees in the event that the corporation loses the lawsuit.
