--- a/bill/index.html
+++ b/bill/index.html
@@ -12,21 +12,21 @@
         <div type="header">
             By: Douglas Anthony<br/>
             House Bill # &lowbar;&lowbar;&lowbar;<br/>
-            <h1>A Bill <br/> To be Entitled <br/> An Act {#title}</h1><br/>
+            <h1>A Bill <br/> To be Entitled <br/> An Act</h1><br/>
             Frivolous Suit Act of 2022<br/>
-            <h2>Purpose {#purpose}</h2><br/>
+            <h2>Purpose</h2><br/>
             To reduce the number of frivolous lawsuits flooding our courts, and to incentivize suits to be settled out-of-court.<br/>
             <strong><i>BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</i></strong><br/>
         </div>
-        <h3>Section 1 {#definitions}</h3> For the purposes of this act, “frivolous suit” refers to any lawsuit `???`.<br/>
-        <h3>Section 2 {#text}</h3> All lawyers' fees, court fees, etc. associated with any resolved suit between two individual private citizens of the United States of America shall be paid by the loser of the lawsuit. <br/>
+        <h3>Section 1}</h3> For the purposes of this act, “frivolous suit” refers to any lawsuit `???`.<br/>
+        <h3>Section 2</h3> All lawyers' fees, court fees, etc. associated with any resolved suit between two individual private citizens of the United States of America shall be paid by the loser of the lawsuit. <br/>
         If the suit is by a noncitizen, such as a corporation, directed towards a private citizen, then the private citizen is exempt from needing to pay the corporation's lawyers' fees. However, the corporation must still pay the citizen's lawyers' fees in the event that the corporation loses the lawsuit.<br/>
         A suit between two corporations is to be treated the same as a suit between two private citizens, that is, the loser must pay all lawyers' fees.<br/>
         Nonprivate citizens, such as those occupying or running for public office, are not exempt from this law, but may...</br>
-        <h3>Section 3 {#violation}</h3> Any defendant demonstrably unable to fulfill such a monetary obligation is allowed to immediately ask _during the proceedings_ to settle out of court. In all other cases, requests to settle out of court must be made in the proper manner.<br/>
-        <h3>Section 4 {#conflicts}</h3> All laws or parts of laws in conflict with this act are hereby repealed.<br/>
-        <h3>Section 5 {#approval}</h3> This act shall become effective 30 days after approval by the Governor or its otherwise becoming a law.<br/>
-        <h3>Section 6 {#funding}</h3> Upon approval by the Governor, this bill will be reviewed by the Appropriation Committee for funding.
+        <h3>Section 3</h3> Any defendant demonstrably unable to fulfill such a monetary obligation is allowed to immediately ask _during the proceedings_ to settle out of court. In all other cases, requests to settle out of court must be made in the proper manner.<br/>
+        <h3>Section 4</h3> All laws or parts of laws in conflict with this act are hereby repealed.<br/>
+        <h3>Section 5</h3> This act shall become effective 30 days after approval by the Governor or its otherwise becoming a law.<br/>
+        <h3>Section 6</h3> Upon approval by the Governor, this bill will be reviewed by the Appropriation Committee for funding.
         <!—- No funding would be needed -->
     </body>
 </html>
