--- a/bill/index.html
+++ b/bill/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=8.5in, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>[DRAFT] Frivolous Suit Act of 2022</title>
         <!-- A Bill to reduce the number of frivolous lawsuits flooding the Judicial system. -->
@@ -16,10 +16,10 @@
             Frivolous Suit Act of 2022<br/>
             <h2>Purpose</h2><br/>
             <p class="purpose">To reduce the number of frivolous lawsuits flooding our courts, and to incentivize suits to be settled out-of-court.</p><br/>
-            <strong><i>BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</i></strong><br/>
-            <p class="defs"><b>Section 1</b> For the purposes of this act, “frivolous suit” refers to any lawsuit `???`.</p><br/>
+            <b><i>BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</i></b><br/>
+            <p class="defs"><b>Section 1</b> For the purposes of this act, “frivolous suit” refers to any lawsuit ???.</p><br/>
             <p class="text"><b>Section 2</b> All lawyers' fees, court fees, etc. associated with any resolved suit between two individual private citizens of the United States of America shall be paid by the loser of the lawsuit. </p><br/>
-            If the suit is by a noncitizen, such as a corporation, directed towards a private citizen, then the private citizen is exempt from needing to pay the corporation's lawyers' fees. However, the corporation must still pay the citizen's lawyers' fees in the event that the corporation loses the lawsuit.</p><br/>
+            If the plaintiff is a noncitizen, such as a corporation, and the defendant is a private citizen, then the defendant is exempt from needing to pay the plaintiff's lawyers' fees in th case of the plainitff succeeding in the lawsuit. However, the corporation must still pay the citizen's lawyers' fees in the event that the corporation loses the lawsuit.</p><br/>
             A suit between two corporations is to be treated the same as a suit between two private citizens, that is, the loser must pay all lawyers' fees.</p><br/>
             Nonprivate citizens, such as those occupying or running for public office, are not exempt from this law, but may...</br>
             <p class="caveat"><b>Section 3</b> Any defendant demonstrably unable to fulfill such a monetary obligation is allowed to immediately ask _during the proceedings_ to settle out of court. In all other cases, requests to settle out of court must be made in the proper manner.</p><br/>
