--- a/bill/index.html
+++ b/bill/index.html
@@ -9,23 +9,26 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <main>
+        <header>
             By: Douglas Anthony<br/>
-            House Bill # &lowbar;&lowbar;&lowbar;&lowbar;&lowbar;&lowbar;<br/>
+            House Bill #9046<br/>
             <h1>A Bill<br/>To be Entitled<br/>An Act<br/></h1><br/>
             Frivolous Suit Act of 2022<br/><br/>
             <h2>Purpose</h2>
             <p class="purpose">To reduce the number of frivolous and/or vexatious lawsuits flooding our courts, and to incentivize suits to be settled out-of-court.</p>
-            <p class="legalese"><b><i>BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</i></b></p>
+            <p class="enacted">BE IT ENACTED BY THE LEGISLATURE OF THE STATE OF WASHINGTON</p>
+        </header>
+        <main>
             <p class="defs"><b>Section 1:</b> For the purposes of this act, “frivolous suit” refers to any lawsuit that has no legal basis; "vexatious lawsuit" refers to any suit leveled for the purpose of harassment and without probable cause.</p>
             <p class="text"><b>Section 2:</b> All lawyers' fees, court fees, etc. associated with any resolved suit between two individual  citizens of the United States of America shall be paid by the loser of the lawsuit. <br/><br/>
             If the plaintiff is a noncitizen, such as a corporation, and the defendant is an individual citizen, then the defendant is exempt from needing to pay the plaintiff's lawyers' fees in the event of the plaintiff succeeding in the lawsuit. However, the corporation must still pay the citizen's lawyers' fees in the event that the corporation loses the lawsuit.<br/><br/>
             A suit between two corporations is to be treated the same as a suit between two individual citizens, that is, the loser must pay all lawyers' fees.</p>
-            <p class="caveat"><b>Section 3:</b> Any defendant demonstrably unable to fulfill such a monetary obligation is allowed to immediately ask _during the proceedings_ to settle out of court. In all other cases, requests to settle out of court must be made in the proper manner.</p>
-            <p class="conflicts"><b>Section 4:</b> All laws or parts of laws in conflict with this act are hereby repealed.</p>
-            <p class="effectiveness"><b>Section 5:</b> This act shall become effective 30 days after approval by the Governor or its otherwise becoming a law.</p>
-            <p class="funding"><b>Section 6:</b> Upon approval by the Governor, this bill will be reviewed by the Appropriation Committee for funding.
-            <!—- No funding would be needed --></p>
+            <p class="caveat"><b>Section 3:</b> Any defendant demonstrably unable to fulfill such a monetary obligation is allowed to immediately ask <i>during the proceedings</i> to settle out of court. In all other cases, requests to settle out of court must be made in the proper manner.</p>
+            <p class="conflict"><b>Section 4:</b> All laws or parts of laws in conflict with this act are hereby repealed.</p>
+            <p class="ratify"><b>Section 5:</b> This act shall become effective 30 days after approval by the Governor or its otherwise becoming a law.</p>
+            <p class="funding"><b>Section 6:</b> Upon approval by the Governor, this bill will be reviewed by the Appropriation Committee for funding.</p>
+            <p class="effects"><b>Section 7:</b> This section is not legally binding, and serves only the purpose to clarify the effects of this bill's being passed.</p>
+            <!—- No funding would be needed -->
         </main>
         <script>window.print();</script>
     </body>
